<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label_potato_timer"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/title_potato_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint_potato_timer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/timer_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="90sp"
            android:text="TIME"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/completed_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_label_potato_timer"
            android:layout_weight="1"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_work_potato_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/work_potato_timer"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_break_potato_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/break_potato_timer"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>



    </LinearLayout>

    <Button
        android:id="@+id/button_stop_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pause_progress"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_title"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/date_potato_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


</LinearLayout>